# ai-watchdog

./: .gitignore  LICENSE  README_DEV.md  pyproject.toml  requirements.txt
ai_watchdog/: README.md  core.py  exceptions.py  llm_factory.py  prompt_builder.py  pydantic_model_builder.py
ai_watchdog/resources/: pii_pattern_collection.py  registry_loader.py
ai_watchdog/resources/pii_recognizers/: __init__.py  in_aadhar_card.py  in_pan_card.py
ai_watchdog/scanners/: ban_code.py  ban_competitors.py  ban_substrings.py  ban_topics.py  bias_detection.py  check_token_limit.py  code_detection.py  detect_invisible_text.py  detect_jailbreak.py  detect_malicious_urls.py  detect_prompt_injection.py  detect_refusals.py  factual_consistency_check.py  gibberish_detection.py  hallucination_detection.py  language_detection.py  language_same.py  pii_detection.py  reading_time.py  regex_scanner.py  relevance_detection.py  secrets_detection.py  sentiment_scanner.py  toxicity_detection.py  url_reachability_check.py
