[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-watchdog"
version = "0.1.0"
description = "A lightweight library for LLM input/output validation and safety scanning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Vivek Shukla", email = "vivek77158@gmail.com" }
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-google-genai>=3.0.0,<4.0.0",
    "langchain-huggingface>=1.0.0,<2.0.0",
    "vaderSentiment>=3.3.0,<4.0.0",
    "detect-secrets>=1.5.0",
    "presidio_analyzer>=2.2.360",
    "presidio_anonymizer>=2.2.360",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63"
]


[project.urls]
Homepage = "https://github.com/vivekx01/ai-watchdog"
Repository = "https://github.com/vivekx01/ai-watchdog"
Issues = "https://github.com/vivekx01/ai-watchdog/issues"

[tool.setuptools.packages.find]
include = ["ai_watchdog", "ai_watchdog.*"]
exclude = ["tests*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
ai_watchdog = "ai_watchdog"
